--- a/mobile-src/android/Application/src/main/res/values/bool.xml
+++ b/mobile-src/android/Application/src/main/res/values/bool.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="localImages">false</bool>
+    <bool name="localImages">true</bool>
 </resources>
