--- a/mobile-src/android/Application/src/main/res/values/styles.xml
+++ b/mobile-src/android/Application/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2012 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,9 +20,33 @@
 
     <style name="AppThemeDark.FullScreen" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
 
+    <style name="AppThemeBlue" parent="@android:style/Theme.Holo">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@color/blue</item>
+        <item name="android:actionBarStyle">@style/TranslucentBlueActionBar</item>
+    </style>
+
+    <style name="AppThemeOrange" parent="@android:style/Theme.Holo">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@color/orange</item>
+        <item name="android:actionBarStyle">@style/TranslucentOrangeActionBar</item>
+    </style>
+
+    <style name="AppThemeBlue.FullScreen" />
+
+    <style name="AppThemeOrange.FullScreen" />
+
     <style name="PhotoGridLayout">
         <item name="android:drawSelectorOnTop">true</item>
         <item name="android:listSelector">@drawable/photogrid_list_selector</item>
+    </style>
+
+    <style name="TranslucentBlueActionBar" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">#99003366</item>
+    </style>
+
+    <style name="TranslucentOrangeActionBar" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">#99663300</item>
     </style>
 
 </resources>
