--- a/mobile-src/android/Application/src/main/res/menu/main_menu.xml
+++ b/mobile-src/android/Application/src/main/res/menu/main_menu.xml
@@ -17,6 +17,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/save_all"
+        android:showAsAction="never"
+        android:title="@string/save_all"/>
+
+    <item
         android:id="@+id/clear_cache"
         android:icon="@android:drawable/ic_menu_delete"
         android:showAsAction="never"
