Step 5: Added url to link mobile App with a backend

--- a/mobile-template/android/res/values/ids.xml
+++ b/mobile-template/android/res/values/ids.xml
@@ -7,5 +7,6 @@
     <item type="id" name="gridView">false</item>
     <item type="id" name="save_all_progressBar">false</item>
     <item type="id" name="save_all">false</item>
+    <item type="id" name="refresh">false</item>
     <item type="id" name="clear_cache">false</item>
 </resources>
