--- a/mobile-src/android/Application/src/main/res/menu/main_menu.xml
+++ b/mobile-src/android/Application/src/main/res/menu/main_menu.xml
@@ -22,6 +22,12 @@
         android:title="@string/save_all"/>
 
     <item
+        android:id="@+id/refresh"
+        android:showAsAction="never"
+        android:icon="@android:drawable/ic_popup_sync"
+        android:title="@string/refresh"/>
+
+    <item
         android:id="@+id/clear_cache"
         android:icon="@android:drawable/ic_menu_delete"
         android:showAsAction="never"
