--- a/mobile-template/android/res/menu/main_menu.xml
+++ b/mobile-template/android/res/menu/main_menu.xml
@@ -2,5 +2,6 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@id/save_all" android:title="@string/save_all" android:showAsAction="never" />
+    <item android:icon="@android:drawable/ic_popup_sync" android:id="@id/refresh" android:title="@string/refresh" android:showAsAction="never" />
     <item android:icon="@android:drawable/ic_menu_delete" android:id="@id/clear_cache" android:title="@string/clear_cache_menu" android:showAsAction="never" />
 </menu>
