--- a/mobile-template/android/res/values/public.xml
+++ b/mobile-template/android/res/values/public.xml
@@ -57,15 +57,19 @@
     <public type="dimen" name="margin_tiny" id="0x7f06000b" />
     <public type="dimen" name="vertical_page_margin" id="0x7f06000c" />
     <public type="string" name="app_name" id="0x7f070000" />
-    <public type="string" name="clear_cache_complete_toast" id="0x7f070001" />
-    <public type="string" name="clear_cache_menu" id="0x7f070002" />
-    <public type="string" name="imageview_description" id="0x7f070003" />
-    <public type="string" name="intro_message" id="0x7f070004" />
-    <public type="string" name="no_network_connection_toast" id="0x7f070005" />
-    <public type="string" name="save_all" id="0x7f070006" />
-    <public type="string" name="save_error" id="0x7f070007" />
-    <public type="string" name="save_to_gallery" id="0x7f070008" />
-    <public type="string" name="saved" id="0x7f070009" />
+    <public type="string" name="backendUrl" id="0x7f070001" />
+    <public type="string" name="clear_cache_complete_toast" id="0x7f070002" />
+    <public type="string" name="clear_cache_menu" id="0x7f070003" />
+    <public type="string" name="imageview_description" id="0x7f070004" />
+    <public type="string" name="intro_message" id="0x7f070005" />
+    <public type="string" name="no_network_connection_toast" id="0x7f070006" />
+    <public type="string" name="refresh" id="0x7f070007" />
+    <public type="string" name="refresh_failed" id="0x7f070008" />
+    <public type="string" name="refreshed" id="0x7f070009" />
+    <public type="string" name="save_all" id="0x7f07000a" />
+    <public type="string" name="save_error" id="0x7f07000b" />
+    <public type="string" name="save_to_gallery" id="0x7f07000c" />
+    <public type="string" name="saved" id="0x7f07000d" />
     <public type="style" name="AppTheme" id="0x7f080000" />
     <public type="style" name="AppThemeBlue" id="0x7f080001" />
     <public type="style" name="AppThemeBlue.FullScreen" id="0x7f080002" />
@@ -111,5 +115,6 @@
     <public type="id" name="gridView" id="0x7f0a0016" />
     <public type="id" name="save_all_progressBar" id="0x7f0a0017" />
     <public type="id" name="save_all" id="0x7f0a0018" />
-    <public type="id" name="clear_cache" id="0x7f0a0019" />
+    <public type="id" name="refresh" id="0x7f0a0019" />
+    <public type="id" name="clear_cache" id="0x7f0a001a" />
 </resources>
