Step 6: Added picture capture and upload feature

--- a/mobile-template/android/res/values/bools.xml
+++ b/mobile-template/android/res/values/bools.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <bool name="addImage">${addImage}</bool>
     <bool name="enableLocalStorage">${enableLocalStorage}</bool>
     <bool name="localImages">${localImages}</bool>
 </resources>
