--- a/mobile-src/android/Application/src/main/res/layout/image_grid_fragment.xml
+++ b/mobile-src/android/Application/src/main/res/layout/image_grid_fragment.xml
@@ -16,20 +16,32 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <GridView
-        android:id="@+id/gridView"
-        style="@style/PhotoGridLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="@dimen/image_thumbnail_size"
-        android:horizontalSpacing="@dimen/image_thumbnail_spacing"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/image_thumbnail_spacing"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+        <GridView
+            android:id="@+id/gridView"
+            style="@style/PhotoGridLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:columnWidth="@dimen/image_thumbnail_size"
+            android:horizontalSpacing="@dimen/image_thumbnail_spacing"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="@dimen/image_thumbnail_spacing"/>
 
+        <Button
+            android:id="@+id/take_picture_button"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:visibility="gone"
+            android:text="@string/take_picture"/>
+    </LinearLayout>
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:id="@+id/save_all_progressBar"
