--- a/mobile-src/android/Application/src/main/res/values/bool.xml
+++ b/mobile-src/android/Application/src/main/res/values/bool.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <bool name="addImage">true</bool>
     <bool name="enableLocalStorage">true</bool>
     <bool name="localImages">false</bool>
 </resources>
