--- a/mobile-template/android/res/layout/image_grid_fragment.xml
+++ b/mobile-template/android/res/layout/image_grid_fragment.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <GridView android:id="@id/gridView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:horizontalSpacing="@dimen/image_thumbnail_spacing" android:verticalSpacing="@dimen/image_thumbnail_spacing" android:stretchMode="columnWidth" android:columnWidth="@dimen/image_thumbnail_size" android:numColumns="auto_fit" style="@style/PhotoGridLayout" />
+    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
+        <GridView android:id="@id/gridView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:horizontalSpacing="@dimen/image_thumbnail_spacing" android:verticalSpacing="@dimen/image_thumbnail_spacing" android:stretchMode="columnWidth" android:columnWidth="@dimen/image_thumbnail_size" android:numColumns="auto_fit" android:layout_weight="1.0" style="@style/PhotoGridLayout" />
+        <Button android:id="@id/take_picture_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/take_picture" />
+    </LinearLayout>
     <ProgressBar android:layout_gravity="center" android:id="@id/save_all_progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge" />
 </FrameLayout>
