--- a/mobile-template/android/res/values/public.xml
+++ b/mobile-template/android/res/values/public.xml
@@ -33,62 +33,68 @@
     <public type="layout" name="image_detail_fragment" id="0x7f030001" />
     <public type="layout" name="image_detail_pager" id="0x7f030002" />
     <public type="layout" name="image_grid_fragment" id="0x7f030003" />
-    <public type="bool" name="enableLocalStorage" id="0x7f040000" />
-    <public type="bool" name="localImages" id="0x7f040001" />
-    <public type="color" name="blue" id="0x7f050000" />
-    <public type="color" name="cardview_dark_background" id="0x7f050001" />
-    <public type="color" name="cardview_light_background" id="0x7f050002" />
-    <public type="color" name="cardview_shadow_end_color" id="0x7f050003" />
-    <public type="color" name="cardview_shadow_start_color" id="0x7f050004" />
-    <public type="color" name="grid_state_focused" id="0x7f050005" />
-    <public type="color" name="grid_state_pressed" id="0x7f050006" />
-    <public type="color" name="orange" id="0x7f050007" />
-    <public type="dimen" name="cardview_compat_inset_shadow" id="0x7f060000" />
-    <public type="dimen" name="cardview_default_elevation" id="0x7f060001" />
-    <public type="dimen" name="cardview_default_radius" id="0x7f060002" />
-    <public type="dimen" name="default_gap" id="0x7f060003" />
-    <public type="dimen" name="horizontal_page_margin" id="0x7f060004" />
-    <public type="dimen" name="image_thumbnail_size" id="0x7f060005" />
-    <public type="dimen" name="image_thumbnail_spacing" id="0x7f060006" />
-    <public type="dimen" name="margin_huge" id="0x7f060007" />
-    <public type="dimen" name="margin_large" id="0x7f060008" />
-    <public type="dimen" name="margin_medium" id="0x7f060009" />
-    <public type="dimen" name="margin_small" id="0x7f06000a" />
-    <public type="dimen" name="margin_tiny" id="0x7f06000b" />
-    <public type="dimen" name="vertical_page_margin" id="0x7f06000c" />
-    <public type="string" name="app_name" id="0x7f070000" />
-    <public type="string" name="backendUrl" id="0x7f070001" />
-    <public type="string" name="clear_cache_complete_toast" id="0x7f070002" />
-    <public type="string" name="clear_cache_menu" id="0x7f070003" />
-    <public type="string" name="imageview_description" id="0x7f070004" />
-    <public type="string" name="intro_message" id="0x7f070005" />
-    <public type="string" name="no_network_connection_toast" id="0x7f070006" />
-    <public type="string" name="refresh" id="0x7f070007" />
-    <public type="string" name="refresh_failed" id="0x7f070008" />
-    <public type="string" name="refreshed" id="0x7f070009" />
-    <public type="string" name="save_all" id="0x7f07000a" />
-    <public type="string" name="save_error" id="0x7f07000b" />
-    <public type="string" name="save_to_gallery" id="0x7f07000c" />
-    <public type="string" name="saved" id="0x7f07000d" />
-    <public type="style" name="AppTheme" id="0x7f080000" />
-    <public type="style" name="AppThemeBlue" id="0x7f080001" />
-    <public type="style" name="AppThemeBlue.FullScreen" id="0x7f080002" />
-    <public type="style" name="AppThemeDark" id="0x7f080003" />
-    <public type="style" name="AppThemeDark.FullScreen" id="0x7f080004" />
-    <public type="style" name="AppThemeOrange" id="0x7f080005" />
-    <public type="style" name="AppThemeOrange.FullScreen" id="0x7f080006" />
-    <public type="style" name="CardView" id="0x7f080007" />
-    <public type="style" name="CardView.Dark" id="0x7f080008" />
-    <public type="style" name="CardView.Light" id="0x7f080009" />
-    <public type="style" name="PhotoGridLayout" id="0x7f08000a" />
-    <public type="style" name="Theme.Base" id="0x7f08000b" />
-    <public type="style" name="Theme.Sample" id="0x7f08000c" />
-    <public type="style" name="TranslucentBlueActionBar" id="0x7f08000d" />
-    <public type="style" name="TranslucentOrangeActionBar" id="0x7f08000e" />
-    <public type="style" name="Widget" id="0x7f08000f" />
-    <public type="style" name="Widget.SampleMessage" id="0x7f080010" />
-    <public type="style" name="Widget.SampleMessageTile" id="0x7f080011" />
-    <public type="style" name="TranslucentDarkActionBar" id="0x7f080012" />
+    <public type="dimen" name="image_thumbnail_size" id="0x7f040000" />
+    <public type="dimen" name="image_thumbnail_spacing" id="0x7f040001" />
+    <public type="dimen" name="horizontal_page_margin" id="0x7f040002" />
+    <public type="dimen" name="vertical_page_margin" id="0x7f040003" />
+    <public type="dimen" name="cardview_compat_inset_shadow" id="0x7f040004" />
+    <public type="dimen" name="cardview_default_elevation" id="0x7f040005" />
+    <public type="dimen" name="cardview_default_radius" id="0x7f040006" />
+    <public type="dimen" name="default_gap" id="0x7f040007" />
+    <public type="dimen" name="margin_huge" id="0x7f040008" />
+    <public type="dimen" name="margin_large" id="0x7f040009" />
+    <public type="dimen" name="margin_medium" id="0x7f04000a" />
+    <public type="dimen" name="margin_small" id="0x7f04000b" />
+    <public type="dimen" name="margin_tiny" id="0x7f04000c" />
+    <public type="style" name="Widget.SampleMessage" id="0x7f050000" />
+    <public type="style" name="AppThemeDark" id="0x7f050001" />
+    <public type="style" name="AppThemeDark.FullScreen" id="0x7f050002" />
+    <public type="style" name="Theme.Base" id="0x7f050003" />
+    <public type="style" name="AppTheme" id="0x7f050005" />
+    <public type="style" name="AppThemeBlue" id="0x7f050006" />
+    <public type="style" name="AppThemeBlue.FullScreen" id="0x7f050007" />
+    <public type="style" name="AppThemeOrange" id="0x7f050008" />
+    <public type="style" name="AppThemeOrange.FullScreen" id="0x7f050009" />
+    <public type="style" name="CardView" id="0x7f05000a" />
+    <public type="style" name="CardView.Dark" id="0x7f05000b" />
+    <public type="style" name="CardView.Light" id="0x7f05000c" />
+    <public type="style" name="PhotoGridLayout" id="0x7f05000d" />
+    <public type="style" name="Theme.Sample" id="0x7f05000e" />
+    <public type="style" name="TranslucentBlueActionBar" id="0x7f05000f" />
+    <public type="style" name="TranslucentOrangeActionBar" id="0x7f050010" />
+    <public type="style" name="Widget" id="0x7f050011" />
+    <public type="style" name="Widget.SampleMessageTile" id="0x7f050012" />
+    <public type="style" name="TranslucentDarkActionBar" id="0x7f050004" />
+    <public type="bool" name="addImage" id="0x7f060000" />
+    <public type="bool" name="enableLocalStorage" id="0x7f060001" />
+    <public type="bool" name="localImages" id="0x7f060002" />
+    <public type="color" name="blue" id="0x7f070000" />
+    <public type="color" name="cardview_dark_background" id="0x7f070001" />
+    <public type="color" name="cardview_light_background" id="0x7f070002" />
+    <public type="color" name="cardview_shadow_end_color" id="0x7f070003" />
+    <public type="color" name="cardview_shadow_start_color" id="0x7f070004" />
+    <public type="color" name="grid_state_focused" id="0x7f070005" />
+    <public type="color" name="grid_state_pressed" id="0x7f070006" />
+    <public type="color" name="orange" id="0x7f070007" />
+    <public type="string" name="app_name" id="0x7f080000" />
+    <public type="string" name="backendUrl" id="0x7f080001" />
+    <public type="string" name="clear_cache_complete_toast" id="0x7f080002" />
+    <public type="string" name="clear_cache_menu" id="0x7f080003" />
+    <public type="string" name="failed_create_file" id="0x7f080004" />
+    <public type="string" name="imageview_description" id="0x7f080005" />
+    <public type="string" name="intro_message" id="0x7f080006" />
+    <public type="string" name="no_camera" id="0x7f080007" />
+    <public type="string" name="no_network_connection_toast" id="0x7f080008" />
+    <public type="string" name="picture_upload_failure" id="0x7f080009" />
+    <public type="string" name="picture_upload_success" id="0x7f08000a" />
+    <public type="string" name="refresh" id="0x7f08000b" />
+    <public type="string" name="refresh_failed" id="0x7f08000c" />
+    <public type="string" name="refreshed" id="0x7f08000d" />
+    <public type="string" name="save_all" id="0x7f08000e" />
+    <public type="string" name="save_error" id="0x7f08000f" />
+    <public type="string" name="save_to_gallery" id="0x7f080010" />
+    <public type="string" name="saved" id="0x7f080011" />
+    <public type="string" name="take_picture" id="0x7f080012" />
     <public type="menu" name="main_menu" id="0x7f090000" />
     <public type="id" name="horizontal" id="0x7f0a0000" />
     <public type="id" name="vertical" id="0x7f0a0001" />
@@ -113,8 +119,9 @@
     <public type="id" name="save_ProgressBar" id="0x7f0a0014" />
     <public type="id" name="pager" id="0x7f0a0015" />
     <public type="id" name="gridView" id="0x7f0a0016" />
-    <public type="id" name="save_all_progressBar" id="0x7f0a0017" />
-    <public type="id" name="save_all" id="0x7f0a0018" />
-    <public type="id" name="refresh" id="0x7f0a0019" />
-    <public type="id" name="clear_cache" id="0x7f0a001a" />
+    <public type="id" name="take_picture_button" id="0x7f0a0017" />
+    <public type="id" name="save_all_progressBar" id="0x7f0a0018" />
+    <public type="id" name="save_all" id="0x7f0a0019" />
+    <public type="id" name="refresh" id="0x7f0a001a" />
+    <public type="id" name="clear_cache" id="0x7f0a001b" />
 </resources>
